package com.fhdo.parkingservice.model;

public enum ParkingSpotType {
    REGULAR,
    HANDICAPPED,
    ELECTRIC_VEHICLE,
    MOTORCYCLE,
    VIP
}
